# incolume.py.fastapi.crud0

./: README.md  alembic.ini  config.py  main.py  pyproject.toml  settings.toml
coverage_report/: cov.xml
coverage_report/html/: d_78efea78fdc3b142___init___py.html  index.html  status.json
examples/FASTAPI_and_JWT_Authentication_main/: main.py
examples/FASTAPI_and_JWT_Authentication_main/app/: model.py
examples/FASTAPI_and_JWT_Authentication_main/app/auth/: auth_bearer.py  auth_handler.py
examples/auth_fastapi_jwt_youtube_master/: README.md
examples/auth_fastapi_jwt_youtube_master/app/: auth_user.py  depends.py  main.py  routes.py  schemas.py
examples/auth_fastapi_jwt_youtube_master/app/db/: connection.py  models.py
examples/auth_fastapi_jwt_youtube_master/migrations/: env.py
examples/auth_fastapi_jwt_youtube_master/migrations/versions/: 075f1853f8dc_add_users_table.py
examples/me/: __init__.py  schemas.py  server.py
examples/me/api/draft/: server.py
examples/me/api/otp/: example_otp.py  oauth2_otp_token.py  otp_prospection0.py  server.py
examples/me/api/sketch/: server.py
examples/me/api/v1/: __init__.py  server.py
examples/me/api/v1/data_base/: connections.py
examples/me/api/v1/routers/: user.py
examples/me/data_base/: __init__.py  connections.py
examples/me/routers/: __init__.py  user.py
examples/official_doc/: get_corrent_user.py  oauth2_pwd_bearer.py
examples/official_doc/header/: server.py
examples/official_doc/security/: get_corrent_user.py  oauth2_with_password_and_hashing_earer_with_jwt_tokens.py  simple_oauth_with_password_and_bearer.py
examples/rogeriosilva-ifpi/MyFlix/src/: server.py
examples/rogeriosilva-ifpi/MyFlix/src/infra/sqlalchemy/models/: models.py
examples/rogeriosilva-ifpi/MyFlix/src/infra/sqlalchemy/repositorios/: series.py
examples/rogeriosilva-ifpi/appanimal/: server.py
examples/rogeriosilva-ifpi/appanimal2/src/: server.py
examples/rogeriosilva-ifpi/blx-backend/alembic/: env.py
examples/rogeriosilva-ifpi/blx-backend/alembic/versions/: 712a951f6a14_inicial.py  935b240cacda_nova_coluna_tamanhos.py  9e3f4f88c280_adicionado_usuario_e_relacionamentos.py  e25a98968b11_adicionado_pedido.py
examples/rogeriosilva-ifpi/blx-backend/src/: server.py
examples/rogeriosilva-ifpi/blx-backend/src/infra/providers/: hash_provider.py  token_provider.py
examples/rogeriosilva-ifpi/blx-backend/src/infra/sqlalchemy/models/: models.py
examples/rogeriosilva-ifpi/blx-backend/src/infra/sqlalchemy/repositorios/: repositorio_pedido.py  repositorio_produto.py  repositorio_usuario.py
examples/rogeriosilva-ifpi/blx-backend/src/jobs/: write_notification.py
examples/rogeriosilva-ifpi/blx-backend/src/routers/: auth_utils.py  rotas_auth.py  rotas_pedidos.py  rotas_produtos.py
examples/rogeriosilva-ifpi/blx-backend/src/schemas/: schemas.py
examples/rogeriosilva-ifpi/hello/: server.py
examples/sumanshu-nankana/: 002_helloWorld_metadata.py  003_metadataTags_url.py  004_docs.py  006_docs_url.py  007_project_config.py  008_env_var.py  009_connect_db.py  010_create_users.py  011_create_users.py  config.py  database.py  main.py  models.py  schemas.py  utils.py
examples/sumanshu-nankana/backend/: main.py
examples/sumanshu-nankana/backend/alembic/: env.py
examples/sumanshu-nankana/backend/alembic/versions/: 875b697ccea6_initial.py
examples/sumanshu-nankana/backend/apis/: base.py  utils.py
examples/sumanshu-nankana/backend/apis/version1/: route_jobs.py  route_login.py  route_users.py
examples/sumanshu-nankana/backend/core/: config.py  security.py
examples/sumanshu-nankana/backend/db/: session.py
examples/sumanshu-nankana/backend/db/models/: jobs.py  users.py
examples/sumanshu-nankana/backend/db/repository/: jobs.py  users.py
examples/sumanshu-nankana/backend/schemas/: jobs.py
examples/sumanshu-nankana/backend/tests/: conftest.py
examples/sumanshu-nankana/backend/tests/db/: test_jobs_repo.py
examples/sumanshu-nankana/backend/tests/utils/: user.py
examples/sumanshu-nankana/backend/webapps/: base.py
examples/sumanshu-nankana/backend/webapps/auth/: forms.py  route_login.py
examples/sumanshu-nankana/backend/webapps/jobs/: forms.py  route_jobs.py
examples/sumanshu-nankana/backend/webapps/users/: forms.py  route_users.py
examples/sumanshu-nankana/migrations/: env.py
examples/sumanshu-nankana/migrations/versions/: 3da1df7e42b1_initial.py
examples/sumanshu-nankana/routers/: items.py  login.py  users.py
examples/sumanshu-nankana/tests/: conftest.py  test1_userroute.py  test2_userroute.py  test_itemroute.py  test_userroute.py
examples/sumanshu-nankana/webapps/routers/: auth.py  items.py  users.py
incolume/py/fastapi/crud0/: __init__.py  models.py  schemas.py  server.py  version.txt
incolume/py/fastapi/crud0/controllers/: __init__.py  auth.py  item.py  user.py  utils.py
incolume/py/fastapi/crud0/db/: __init__.py  connections.py  persistence.py
incolume/py/fastapi/crud0/db/migrations/: env.py
incolume/py/fastapi/crud0/db/migrations/versions/: 99b8586ea918_full_name_field.py  a3ad2d373dcb_add_users_table.py
incolume/py/fastapi/crud0/routers/: __init__.py  admin.py  auth.py  auth_otp.py  items.py  user.py
tests/: __init__.py  conftest.py  test_api_root.py  test_controllers_auth.py  test_controllers_user.py  test_controllers_utils.py  test_model.py  test_package.py  test_routers_auth.py  test_routers_auth_otp.py  test_routers_user.py  test_schema.py
